# git2wrap

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/git2wrap/: blob.hpp  branch.hpp  buf.hpp  commit.hpp  diff.hpp  error.hpp  git2wrap.hpp  libgit2.hpp  object.hpp  oid.hpp  reference.hpp  repository.hpp  revwalk.hpp  signature.hpp  tag.hpp  tree.hpp  types.hpp
source/: blob.cpp  branch.cpp  buf.cpp  commit.cpp  diff.cpp  git2wrap.cpp  libgit2.cpp  object.cpp  oid.cpp  reference.cpp  repository.cpp  revwalk.cpp  signature.cpp  tag.cpp  tree.cpp
test/: CMakeLists.txt
test/source/: git2wrap_test.cpp
